htmldir = $(prefix)/html

JSMIN=../util/jsmin
JSSRC=dbrelay/js/src

noinst_PROGRAMS = dbrelay/js/dbrelay-core-min.js dbrelay/js/dbrelay-ui-all-min.js dbrelay/js/dbrelay-ui-sqltableeditor-min.js dbrelay/js/dbrelay-ui-sqlresultpanel-min.js 

dbrelay/js/dbrelay-core-min.js: $(JSSRC)/sqlObject.js $(JSSRC)/sqlDbAccess.js $(JSSRC)/sqlTable.js
	$(JSMIN) < $+ > $@

dbrelay/js/dbrelay-ui-all-min.js: $(JSSRC)/ui/ConnectionWindow.js $(JSSRC)/ui/StatusWindow.js $(JSSRC)/ui/CreateTableWindow.js $(JSSRC)/ui/SqlTableEditor.js $(JSSRC)/ui/SqlSelectGrid.js $(JSSRC)/ui/SqlResultPanel.js $(JSSRC)/ui/App.js
	$(JSMIN) < $+ > $@

dbrelay/js/dbrelay-ui-sqltableeditor-min.js: $(JSSRC)/ui/SqlTableEditor.js
	$(JSMIN) < $+ > $@

dbrelay/js/dbrelay-ui-sqlresultpanel-min.js: $(JSSRC)/ui/SqlSelectGrid.js $(JSSRC)/ui/SqlResultPanel.js
	$(JSMIN) < $+ > $@

FILES = dbrelay/index.html \
./50x.html \
docs/index.html \
dbrelay/status.html \
dbrelay/oldindex.html \
dbrelay/plugins/README.txt \
dbrelay/css/dbrelay.css \
dbrelay/docs/doc.css \
dbrelay/docs/environment.html \
dbrelay/docs/example.html \
dbrelay/docs/features.html \
dbrelay/docs/index.html \
dbrelay/docs/interaction.html \
dbrelay/docs/interfaces.html \
dbrelay/docs/jsapi-sqldbaccess.html \
dbrelay/docs/jsapi-sqlobject.html \
dbrelay/docs/jsapi-sqltable.html \
dbrelay/docs/nav.html \
dbrelay/docs/overview.html \
dbrelay/docs/SQL_query_interface.html \
dbrelay/docs/viaduct_architecture.graffle \
dbrelay/docs/viaduct_architecture.pdf \
dbrelay/docs/viaduct_specification.html \
dbrelay/eg/inlinetable_example.html \
dbrelay/eg/dbrelay_interactive_xss.html \
dbrelay/eg/python_example.html \
dbrelay/images/application-split-vertical.png \
dbrelay/images/application.png \
dbrelay/images/bullet_arrow_up.png \
dbrelay/images/binocular.png \
dbrelay/images/chain.png \
dbrelay/images/control-180.png \
dbrelay/images/control-skip-180.png \
dbrelay/images/control-skip.png \
dbrelay/images/control.png \
dbrelay/images/cross-circle.png \
dbrelay/images/disk.png \
dbrelay/images/document-attribute-l.png \
dbrelay/images/document-globe.png \
dbrelay/images/document-list.png \
dbrelay/images/document-pdf-text.png \
dbrelay/images/folder-open-table.png \
dbrelay/images/gear.png \
dbrelay/images/home.png \
dbrelay/images/html.png \
dbrelay/images/information.png \
dbrelay/images/monitor.png \
dbrelay/images/pencil.png \
dbrelay/images/plug.png \
dbrelay/images/plus-circle.png \
dbrelay/images/question.png \
dbrelay/images/refresh.gif \
dbrelay/images/script-attribute-s.png \
dbrelay/images/spinner.gif \
dbrelay/images/table.png \
dbrelay/images/table-export.png \
dbrelay/images/table-excel.png \
dbrelay/images/tables.png \
dbrelay/images/tick.png \
dbrelay/js/ext-3.0.0/adapter/jquery/ext-jquery-adapter.js \
dbrelay/js/ext-3.0.0/ext-all.js \
dbrelay/js/ext-3.0.0/license.txt \
dbrelay/js/ext-3.0.0/resources/charts.swf \
dbrelay/js/ext-3.0.0/resources/css/ext-all-notheme.css \
dbrelay/js/ext-3.0.0/resources/css/ext-all.css \
dbrelay/js/ext-3.0.0/resources/css/README.txt \
dbrelay/js/ext-3.0.0/resources/css/reset-min.css \
dbrelay/js/ext-3.0.0/resources/css/structure/borders.css \
dbrelay/js/ext-3.0.0/resources/css/structure/box.css \
dbrelay/js/ext-3.0.0/resources/css/structure/button.css \
dbrelay/js/ext-3.0.0/resources/css/structure/combo.css \
dbrelay/js/ext-3.0.0/resources/css/structure/core.css \
dbrelay/js/ext-3.0.0/resources/css/structure/date-picker.css \
dbrelay/js/ext-3.0.0/resources/css/structure/dd.css \
dbrelay/js/ext-3.0.0/resources/css/structure/debug.css \
dbrelay/js/ext-3.0.0/resources/css/structure/dialog.css \
dbrelay/js/ext-3.0.0/resources/css/structure/editor.css \
dbrelay/js/ext-3.0.0/resources/css/structure/form.css \
dbrelay/js/ext-3.0.0/resources/css/structure/grid.css \
dbrelay/js/ext-3.0.0/resources/css/structure/layout.css \
dbrelay/js/ext-3.0.0/resources/css/structure/list-view.css \
dbrelay/js/ext-3.0.0/resources/css/structure/menu.css \
dbrelay/js/ext-3.0.0/resources/css/structure/panel-reset.css \
dbrelay/js/ext-3.0.0/resources/css/structure/panel.css \
dbrelay/js/ext-3.0.0/resources/css/structure/progress.css \
dbrelay/js/ext-3.0.0/resources/css/structure/qtips.css \
dbrelay/js/ext-3.0.0/resources/css/structure/reset.css \
dbrelay/js/ext-3.0.0/resources/css/structure/resizable.css \
dbrelay/js/ext-3.0.0/resources/css/structure/slider.css \
dbrelay/js/ext-3.0.0/resources/css/structure/tabs.css \
dbrelay/js/ext-3.0.0/resources/css/structure/toolbar.css \
dbrelay/js/ext-3.0.0/resources/css/structure/tree.css \
dbrelay/js/ext-3.0.0/resources/css/structure/window.css \
dbrelay/js/ext-3.0.0/resources/css/visual/borders.css \
dbrelay/js/ext-3.0.0/resources/css/visual/box.css \
dbrelay/js/ext-3.0.0/resources/css/visual/button.css \
dbrelay/js/ext-3.0.0/resources/css/visual/combo.css \
dbrelay/js/ext-3.0.0/resources/css/visual/core.css \
dbrelay/js/ext-3.0.0/resources/css/visual/date-picker.css \
dbrelay/js/ext-3.0.0/resources/css/visual/dd.css \
dbrelay/js/ext-3.0.0/resources/css/visual/debug.css \
dbrelay/js/ext-3.0.0/resources/css/visual/dialog.css \
dbrelay/js/ext-3.0.0/resources/css/visual/editor.css \
dbrelay/js/ext-3.0.0/resources/css/visual/form.css \
dbrelay/js/ext-3.0.0/resources/css/visual/grid.css \
dbrelay/js/ext-3.0.0/resources/css/visual/layout.css \
dbrelay/js/ext-3.0.0/resources/css/visual/list-view.css \
dbrelay/js/ext-3.0.0/resources/css/visual/menu.css \
dbrelay/js/ext-3.0.0/resources/css/visual/panel.css \
dbrelay/js/ext-3.0.0/resources/css/visual/progress.css \
dbrelay/js/ext-3.0.0/resources/css/visual/qtips.css \
dbrelay/js/ext-3.0.0/resources/css/visual/resizable.css \
dbrelay/js/ext-3.0.0/resources/css/visual/slider.css \
dbrelay/js/ext-3.0.0/resources/css/visual/tabs.css \
dbrelay/js/ext-3.0.0/resources/css/visual/toolbar.css \
dbrelay/js/ext-3.0.0/resources/css/visual/tree.css \
dbrelay/js/ext-3.0.0/resources/css/visual/window.css \
dbrelay/js/ext-3.0.0/resources/css/xtheme-blue.css \
dbrelay/js/ext-3.0.0/resources/expressinstall.swf \
dbrelay/js/ext-3.0.0/resources/images/default/box/corners-blue.gif \
dbrelay/js/ext-3.0.0/resources/images/default/box/corners.gif \
dbrelay/js/ext-3.0.0/resources/images/default/box/l-blue.gif \
dbrelay/js/ext-3.0.0/resources/images/default/box/l.gif \
dbrelay/js/ext-3.0.0/resources/images/default/box/r-blue.gif \
dbrelay/js/ext-3.0.0/resources/images/default/box/r.gif \
dbrelay/js/ext-3.0.0/resources/images/default/box/tb-blue.gif \
dbrelay/js/ext-3.0.0/resources/images/default/box/tb.gif \
dbrelay/js/ext-3.0.0/resources/images/default/button/arrow.gif \
dbrelay/js/ext-3.0.0/resources/images/default/button/btn.gif \
dbrelay/js/ext-3.0.0/resources/images/default/button/group-cs.gif \
dbrelay/js/ext-3.0.0/resources/images/default/button/group-lr.gif \
dbrelay/js/ext-3.0.0/resources/images/default/button/group-tb.gif \
dbrelay/js/ext-3.0.0/resources/images/default/button/s-arrow-b-noline.gif \
dbrelay/js/ext-3.0.0/resources/images/default/button/s-arrow-b.gif \
dbrelay/js/ext-3.0.0/resources/images/default/button/s-arrow-bo.gif \
dbrelay/js/ext-3.0.0/resources/images/default/button/s-arrow-noline.gif \
dbrelay/js/ext-3.0.0/resources/images/default/button/s-arrow-o.gif \
dbrelay/js/ext-3.0.0/resources/images/default/button/s-arrow.gif \
dbrelay/js/ext-3.0.0/resources/images/default/dd/drop-add.gif \
dbrelay/js/ext-3.0.0/resources/images/default/dd/drop-no.gif \
dbrelay/js/ext-3.0.0/resources/images/default/dd/drop-yes.gif \
dbrelay/js/ext-3.0.0/resources/images/default/editor/tb-sprite.gif \
dbrelay/js/ext-3.0.0/resources/images/default/form/checkbox.gif \
dbrelay/js/ext-3.0.0/resources/images/default/form/clear-trigger.gif \
dbrelay/js/ext-3.0.0/resources/images/default/form/clear-trigger.psd \
dbrelay/js/ext-3.0.0/resources/images/default/form/date-trigger.gif \
dbrelay/js/ext-3.0.0/resources/images/default/form/date-trigger.psd \
dbrelay/js/ext-3.0.0/resources/images/default/form/error-tip-corners.gif \
dbrelay/js/ext-3.0.0/resources/images/default/form/exclamation.gif \
dbrelay/js/ext-3.0.0/resources/images/default/form/radio.gif \
dbrelay/js/ext-3.0.0/resources/images/default/form/search-trigger.gif \
dbrelay/js/ext-3.0.0/resources/images/default/form/search-trigger.psd \
dbrelay/js/ext-3.0.0/resources/images/default/form/text-bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/form/trigger-tpl.gif \
dbrelay/js/ext-3.0.0/resources/images/default/form/trigger.gif \
dbrelay/js/ext-3.0.0/resources/images/default/form/trigger.psd \
dbrelay/js/ext-3.0.0/resources/images/default/gradient-bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/arrow-left-white.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/arrow-right-white.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/col-move-bottom.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/col-move-top.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/columns.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/dirty.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/done.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/drop-no.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/drop-yes.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/footer-bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/grid-blue-hd.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/grid-blue-split.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/grid-hrow.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/grid-loading.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/grid-split.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/grid-vista-hd.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/grid3-hd-btn.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/grid3-hrow-over.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/grid3-hrow.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/grid3-special-col-bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/grid3-special-col-sel-bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/group-by.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/group-collapse.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/group-expand-sprite.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/group-expand.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/hd-pop.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/hmenu-asc.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/hmenu-desc.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/hmenu-lock.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/hmenu-lock.png \
dbrelay/js/ext-3.0.0/resources/images/default/grid/hmenu-unlock.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/hmenu-unlock.png \
dbrelay/js/ext-3.0.0/resources/images/default/grid/invalid_line.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/loading.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/mso-hd.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/nowait.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/page-first-disabled.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/page-first.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/page-last-disabled.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/page-last.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/page-next-disabled.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/page-next.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/page-prev-disabled.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/page-prev.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/pick-button.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/refresh.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/row-check-sprite.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/row-expand-sprite.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/row-over.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/row-sel.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/sort-hd.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/sort_asc.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/sort_desc.gif \
dbrelay/js/ext-3.0.0/resources/images/default/grid/wait.gif \
dbrelay/js/ext-3.0.0/resources/images/default/layout/collapse.gif \
dbrelay/js/ext-3.0.0/resources/images/default/layout/expand.gif \
dbrelay/js/ext-3.0.0/resources/images/default/layout/gradient-bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/layout/mini-bottom.gif \
dbrelay/js/ext-3.0.0/resources/images/default/layout/mini-left.gif \
dbrelay/js/ext-3.0.0/resources/images/default/layout/mini-right.gif \
dbrelay/js/ext-3.0.0/resources/images/default/layout/mini-top.gif \
dbrelay/js/ext-3.0.0/resources/images/default/layout/ns-collapse.gif \
dbrelay/js/ext-3.0.0/resources/images/default/layout/ns-expand.gif \
dbrelay/js/ext-3.0.0/resources/images/default/layout/panel-close.gif \
dbrelay/js/ext-3.0.0/resources/images/default/layout/panel-title-bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/layout/panel-title-light-bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/layout/stick.gif \
dbrelay/js/ext-3.0.0/resources/images/default/layout/stuck.gif \
dbrelay/js/ext-3.0.0/resources/images/default/layout/tab-close-on.gif \
dbrelay/js/ext-3.0.0/resources/images/default/layout/tab-close.gif \
dbrelay/js/ext-3.0.0/resources/images/default/menu/checked.gif \
dbrelay/js/ext-3.0.0/resources/images/default/menu/group-checked.gif \
dbrelay/js/ext-3.0.0/resources/images/default/menu/item-over.gif \
dbrelay/js/ext-3.0.0/resources/images/default/menu/menu-parent.gif \
dbrelay/js/ext-3.0.0/resources/images/default/menu/menu.gif \
dbrelay/js/ext-3.0.0/resources/images/default/menu/unchecked.gif \
dbrelay/js/ext-3.0.0/resources/images/default/panel/corners-sprite.gif \
dbrelay/js/ext-3.0.0/resources/images/default/panel/left-right.gif \
dbrelay/js/ext-3.0.0/resources/images/default/panel/light-hd.gif \
dbrelay/js/ext-3.0.0/resources/images/default/panel/tool-sprite-tpl.gif \
dbrelay/js/ext-3.0.0/resources/images/default/panel/tool-sprites.gif \
dbrelay/js/ext-3.0.0/resources/images/default/panel/tools-sprites-trans.gif \
dbrelay/js/ext-3.0.0/resources/images/default/panel/top-bottom.gif \
dbrelay/js/ext-3.0.0/resources/images/default/panel/top-bottom.png \
dbrelay/js/ext-3.0.0/resources/images/default/panel/white-corners-sprite.gif \
dbrelay/js/ext-3.0.0/resources/images/default/panel/white-left-right.gif \
dbrelay/js/ext-3.0.0/resources/images/default/panel/white-top-bottom.gif \
dbrelay/js/ext-3.0.0/resources/images/default/progress/progress-bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/qtip/bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/qtip/close.gif \
dbrelay/js/ext-3.0.0/resources/images/default/qtip/tip-anchor-sprite.gif \
dbrelay/js/ext-3.0.0/resources/images/default/qtip/tip-sprite.gif \
dbrelay/js/ext-3.0.0/resources/images/default/s.gif \
dbrelay/js/ext-3.0.0/resources/images/default/shadow-c.png \
dbrelay/js/ext-3.0.0/resources/images/default/shadow-lr.png \
dbrelay/js/ext-3.0.0/resources/images/default/shadow.png \
dbrelay/js/ext-3.0.0/resources/images/default/shared/blue-loading.gif \
dbrelay/js/ext-3.0.0/resources/images/default/shared/calendar.gif \
dbrelay/js/ext-3.0.0/resources/images/default/shared/glass-bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/shared/hd-sprite.gif \
dbrelay/js/ext-3.0.0/resources/images/default/shared/large-loading.gif \
dbrelay/js/ext-3.0.0/resources/images/default/shared/left-btn.gif \
dbrelay/js/ext-3.0.0/resources/images/default/shared/loading-balls.gif \
dbrelay/js/ext-3.0.0/resources/images/default/shared/right-btn.gif \
dbrelay/js/ext-3.0.0/resources/images/default/shared/warning.gif \
dbrelay/js/ext-3.0.0/resources/images/default/sizer/e-handle-dark.gif \
dbrelay/js/ext-3.0.0/resources/images/default/sizer/e-handle.gif \
dbrelay/js/ext-3.0.0/resources/images/default/sizer/ne-handle-dark.gif \
dbrelay/js/ext-3.0.0/resources/images/default/sizer/ne-handle.gif \
dbrelay/js/ext-3.0.0/resources/images/default/sizer/nw-handle-dark.gif \
dbrelay/js/ext-3.0.0/resources/images/default/sizer/nw-handle.gif \
dbrelay/js/ext-3.0.0/resources/images/default/sizer/s-handle-dark.gif \
dbrelay/js/ext-3.0.0/resources/images/default/sizer/s-handle.gif \
dbrelay/js/ext-3.0.0/resources/images/default/sizer/se-handle-dark.gif \
dbrelay/js/ext-3.0.0/resources/images/default/sizer/se-handle.gif \
dbrelay/js/ext-3.0.0/resources/images/default/sizer/square.gif \
dbrelay/js/ext-3.0.0/resources/images/default/sizer/sw-handle-dark.gif \
dbrelay/js/ext-3.0.0/resources/images/default/sizer/sw-handle.gif \
dbrelay/js/ext-3.0.0/resources/images/default/slider/slider-bg.png \
dbrelay/js/ext-3.0.0/resources/images/default/slider/slider-thumb.png \
dbrelay/js/ext-3.0.0/resources/images/default/slider/slider-v-bg.png \
dbrelay/js/ext-3.0.0/resources/images/default/slider/slider-v-thumb.png \
dbrelay/js/ext-3.0.0/resources/images/default/tabs/scroll-left.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tabs/scroll-right.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tabs/scroller-bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tabs/tab-btm-inactive-left-bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tabs/tab-btm-inactive-right-bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tabs/tab-btm-left-bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tabs/tab-btm-right-bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tabs/tab-close.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tabs/tab-strip-bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tabs/tab-strip-bg.png \
dbrelay/js/ext-3.0.0/resources/images/default/tabs/tab-strip-btm-bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tabs/tabs-sprite.gif \
dbrelay/js/ext-3.0.0/resources/images/default/toolbar/bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/toolbar/btn-arrow-light.gif \
dbrelay/js/ext-3.0.0/resources/images/default/toolbar/btn-arrow.gif \
dbrelay/js/ext-3.0.0/resources/images/default/toolbar/btn-over-bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/toolbar/gray-bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/toolbar/more.gif \
dbrelay/js/ext-3.0.0/resources/images/default/toolbar/tb-bg.gif \
dbrelay/js/ext-3.0.0/resources/images/default/toolbar/tb-btn-sprite.gif \
dbrelay/js/ext-3.0.0/resources/images/default/toolbar/tb-xl-btn-sprite.gif \
dbrelay/js/ext-3.0.0/resources/images/default/toolbar/tb-xl-sep.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/arrows.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/drop-add.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/drop-between.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/drop-no.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/drop-over.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/drop-under.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/drop-yes.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/elbow-end-minus-nl.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/elbow-end-minus.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/elbow-end-plus-nl.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/elbow-end-plus.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/elbow-end.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/elbow-line.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/elbow-minus-nl.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/elbow-minus.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/elbow-plus-nl.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/elbow-plus.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/elbow.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/folder-open.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/folder.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/leaf.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/loading.gif \
dbrelay/js/ext-3.0.0/resources/images/default/tree/s.gif \
dbrelay/js/ext-3.0.0/resources/images/default/window/icon-error.gif \
dbrelay/js/ext-3.0.0/resources/images/default/window/icon-info.gif \
dbrelay/js/ext-3.0.0/resources/images/default/window/icon-question.gif \
dbrelay/js/ext-3.0.0/resources/images/default/window/icon-warning.gif \
dbrelay/js/ext-3.0.0/resources/images/default/window/left-corners.png \
dbrelay/js/ext-3.0.0/resources/images/default/window/left-corners.psd \
dbrelay/js/ext-3.0.0/resources/images/default/window/left-right.png \
dbrelay/js/ext-3.0.0/resources/images/default/window/left-right.psd \
dbrelay/js/ext-3.0.0/resources/images/default/window/right-corners.png \
dbrelay/js/ext-3.0.0/resources/images/default/window/right-corners.psd \
dbrelay/js/ext-3.0.0/resources/images/default/window/top-bottom.png \
dbrelay/js/ext-3.0.0/resources/images/default/window/top-bottom.psd \
dbrelay/js/jquery/jquery-1.3.2.min.js \
dbrelay/js/jquery/jquery-ui-1.7.min.js \
dbrelay/js/jquery/jquery.getUrlParam.js \
dbrelay/js/dbrelay-core-min.js \
dbrelay/js/dbrelay-ui-all-min.js \
dbrelay/js/dbrelay-ui-sqltableeditor-min.js \
dbrelay/js/dbrelay-ui-sqlresultpanel-min.js \
dbrelay/tablesorter/asc.png \
dbrelay/tablesorter/bg.png \
dbrelay/tablesorter/desc.png \
dbrelay/tablesorter/jquery.tablesorter.min.js \
dbrelay/tablesorter/style.css

install-data-local:
	for f in $(FILES) ; do \
	d=`echo $$f | sed -e 's,/[^/]*$$,,'`; \
	$(mkinstalldirs) $(DESTDIR)$(htmldir)/$$d; \
	$(INSTALL_DATA) $$f $(DESTDIR)$(htmldir)/$$f; \
	echo $$f $$d; \
	done


